set max-width on more info dd's to not overflow (bug 1129451)

--- a/src/media/css/detail/more-info.styl
+++ b/src/media/css/detail/more-info.styl
@@ -15,12 +15,13 @@
         }
     }
     dt {
-        color: $greyscale-dark-grey;
+        type_body();
         font-weight: 400;
         margin-bottom: 10px;
     }
     dd {
         display: inline-block;
+        max-width: 100%;
         type_body();
 
         &:last-child {
